<resources>
    <string name="app_name">Accuride SG</string>
    <string name="name2">ACCURIDE SG</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="go">Go</string>
    <string name="background_image">background_image</string>
    <string name="activity_2">Activity 2</string>
    <string name="start_and_or_destination_is_empty">Start and/or Destination is empty!</string>
    <string name="fastest">Fastest</string>
    <string name="adults">Adults</string>
    <string name="students">Students</string>
    <string name="senior_citizens">Senior Citizens</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="announcement_button">announcement button</string>
    <string name="dash">-</string>
    <string name="start_string">TextView</string>
    <string name="destination_string">TextView</string>
    <string name="stops">Stops</string>
    <string name="hint1">Where are you?</string>
    <string name="hint2">Where are you going?</string>
    <string name="card_fare">Card Fare</string>
    <string name="minutes">Minutes</string>
</resources>
