<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/adultFare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:text="@string/adults"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/studentFare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/adultFare"
        android:layout_centerInParent="false"
        android:text="@string/students"
        android:textColor="@android:color/black"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/elderlyFare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/studentFare"
        android:layout_centerInParent="false"
        android:text="@string/senior_citizens"
        android:textColor="@android:color/black"
        android:textStyle="normal" />

</LinearLayout>